force-app/main/default/objects/Chargebee_Setting__mdt/Chargebee_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Chargebee Setting</label>
    <pluralLabel>Chargebee Settings</pluralLabel>
</CustomObject>