force-app/main/default/objects/Chargebee_Setting__mdt/fields/Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Type__c</fullName>
    <label>Authorization Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>