force-app/main/default/objects/Chargebee_Setting__mdt/fields/Cancel_Subscription_Url__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Subscription_Url__c</fullName>
    <label>Cancel Subscription Url</label>
    <type>Url</type>
</CustomField>