force-app/main/default/objects/Chargebee_Setting__mdt/fields/Charge_Bee_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Bee_Site_Name__c</fullName>
    <label>Charge Bee Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>