force-app/main/default/objects/Chargebee_Setting__mdt/fields/ChargeBee_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>ChargeBee_Site_Id__c</fullName>
    <label>ChargeBee Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>