force-app/main/default/objects/Chargebee_Setting__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <defaultValue>&quot;application/x-www-form-urlencoded&quot;</defaultValue>
    <label>ContentType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>