force-app/main/default/objects/Chargebee_Setting__mdt/fields/Create_Customer_Url__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer_Url__c</fullName>
    <label>Create Customer Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>