force-app/main/default/objects/Chargebee_Setting__mdt/fields/Create_Invoice_Url__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice_Url__c</fullName>
    <label>Create Invoice Url</label>
    <type>Url</type>
</CustomField>