force-app/main/default/objects/Chargebee_Setting__mdt/fields/Create_Subscription_Url__c.field-meta.xml
<CustomField>
    <fullName>Create_Subscription_Url__c</fullName>
    <label>Create Subscription Url</label>
    <type>Url</type>
</CustomField>