force-app/main/default/objects/Chargebee_Setting__mdt/fields/Days_to_delay_location_invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_delay_location_invoice__c</fullName>
    <label>Days to delay location invoice</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>