force-app/main/default/objects/Chargebee_Setting__mdt/fields/Days_to_delay_parent_invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_to_delay_parent_invoice__c</fullName>
    <label>Days to delay parent invoice</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>