force-app/main/default/objects/Chargebee_Setting__mdt/fields/Delete_Hierarchy_Url__c.field-meta.xml
<CustomField>
    <fullName>Delete_Hierarchy_Url__c</fullName>
    <label>Delete Hierarchy Url</label>
    <type>Url</type>
</CustomField>