force-app/main/default/objects/Chargebee_Setting__mdt/fields/Fetch_Unpaid_Invoices_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Fetch_Unpaid_Invoices_for_Customer__c</fullName>
    <label>Fetch Unpaid Invoices for Customer</label>
    <type>Url</type>
</CustomField>