force-app/main/default/objects/Chargebee_Setting__mdt/fields/Invoice_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Base_Url__c</fullName>
    <label>Invoice Base Url</label>
    <type>Url</type>
</CustomField>