force-app/main/default/objects/Chargebee_Setting__mdt/fields/Invoice_Product_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Product_Prefix__c</fullName>
    <label>Invoice Product Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>