force-app/main/default/objects/Chargebee_Setting__mdt/fields/Pause_Subscription_Url__c.field-meta.xml
<CustomField>
    <fullName>Pause_Subscription_Url__c</fullName>
    <label>Pause Subscription Url</label>
    <type>Url</type>
</CustomField>