force-app/main/default/objects/Chargebee_Setting__mdt/fields/Resume_Subscription_Url__c.field-meta.xml
<CustomField>
    <fullName>Resume_Subscription_Url__c</fullName>
    <label>Resume Subscription Url</label>
    <type>Url</type>
</CustomField>