force-app/main/default/objects/Chargebee_Setting__mdt/fields/Retrieve_Invoice_as_PDF_URL__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Invoice_as_PDF_URL__c</fullName>
    <label>Retrieve Invoice as PDF URL</label>
    <type>Url</type>
</CustomField>