force-app/main/default/objects/Chargebee_Setting__mdt/fields/Set_Hierarchy_Url__c.field-meta.xml
<CustomField>
    <fullName>Set_Hierarchy_Url__c</fullName>
    <label>Set Hierarchy Url</label>
    <type>Url</type>
</CustomField>