force-app/main/default/objects/Chargebee_Setting__mdt/fields/Update_Customer_Url__c.field-meta.xml
<CustomField>
    <fullName>Update_Customer_Url__c</fullName>
    <label>Update Customer Url</label>
    <type>Url</type>
</CustomField>