force-app/main/default/objects/Chargebee_Setting__mdt/fields/Update_Subscription_Url__c.field-meta.xml
<CustomField>
    <fullName>Update_Subscription_Url__c</fullName>
    <label>Update Subscription Url</label>
    <type>Url</type>
</CustomField>