force-app/main/default/objects/Chargebee_Setting__mdt/fields/Void_Invoice_Url__c.field-meta.xml
<CustomField>
    <fullName>Void_Invoice_Url__c</fullName>
    <label>Void Invoice Url</label>
    <type>Url</type>
</CustomField>